# uv_ruff_pro-commit

./: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
