[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.2",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
docstring-code-line-length = 20

[tool.ruff.lint]
select = [
  "F",  # pyflakes
  "E",  # pycodestyle
  "W",  # warnings
  "N",  # pep8-naming
  "PL",  # pylint
  "C90",  # mccabe
  "T",  # pyupgrade
  "I",  # isort
  "D", # pyupgrade
  "UP",  # pyupgrade
  "A",  # flake8-builtins
  "COM",  # flake8-commas
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "TCH",  # flake8-type-checking
  "DTZ",  # flake8-datetimez
  "T20",  # flake8-print
  "TID",  # flake8-tidy-imports
  "SIM",  # flake8-simplify
  "Q",  # flake8-quotes
  "PTH",  # flake8-use-pathlib
  "ICN",  # flake8-import-conventions
  "DJ",  # flake8-django

]

ignore = [
   "D100",
   "D101",
   "D107",
   "T201",
]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
